# calculator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  calc.cpp  clang-format  clang-tidy  test_calc.sh
src/: calc.cpp  calc.h  logger.cpp  logger.h  main.cpp  parser.cpp  parser.h  printer.cpp  printer.h  task.h
tests/: CMakeLists.txt  calc_test.cpp  parser_test.cpp
